# rust-regl

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
examples/: attester.rs  tsm.rs
src/: lib.rs
src/attesters/: mod.rs  ratsd.rs
src/attesters/cca/: mod.rs  ratsd.rs  simulated.rs
src/attesters/cca/data/: evidence.cbor
src/attesters/cca/utils/: constants.rs  crypto.rs  decode.rs  encode.rs  mod.rs  print.rs  types.rs
src/tsm/: error.rs  linuxtsm.rs  mod.rs
test-data/: cca-claims.json  rak.jwk
